# online_cinema

./: .env.sample  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0c54b746fa5d_add_movies_models.py  5ca700bcbeba_add_movie_models.py  663435593824_add_your_migration_message.py  ea02a48e06d3_add_carts_models.py
app/: main.py
app/config/: __init__.py  dependencies.py  settings.py
app/db/: __init__.py  database.py
app/db/models/: accounts.py  base.py  carts.py  movies.py
app/exceptions/: __init__.py
app/notifications/: __init__.py  emails.py  interfaces.py
app/notifications/templates/: activation_request.html
app/routes/: __init__.py  accounts.py  movies.py  profiles.py
app/schemas/: __init__.py  accounts.py  movies.py  profiles.py
app/security/: interfaces.py  token_manager.py
app/storages/: s3.py
app/validation/: __init__.py  profile.py
