[project]
name = "online-cinema"
version = "0.1.0"
description = ""
authors = [
    { name = "kkkkkkkkatya", email = "vasyabarilyuk@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-core (>=2.28.0,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
alembic = "^1.15.2"

